[gd_scene load_steps=5 format=2]

[ext_resource path="res://29px_necromancer.png" type="Texture" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]
[ext_resource path="res://lose4.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 16.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 2 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1, 2 )
shape = SubResource( 1 )

[node name="dead_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
